--- a/static/css/app.css
+++ b/static/css/app.css
@@ -31,9 +31,9 @@ body {
   height: 100%; /* For at least Firefox */
   min-height: 100%;
   box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
-  background: url(../img/bg.jpg);
+  background: url(../images/bg.png);
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: center;
 }
 .site-wrapper-inner {
@@ -258,4 +258,9 @@ body {
             transform: scale(0.8);
     opacity: 0.5;
   }
+}
+#client-btn {
+  max-width: 100px;
+  margin-right: auto;
+  margin-left: auto;
 }
