--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,11 +7,16 @@
     <title>Admin</title>
     <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/admin.css') }}" rel="stylesheet">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">Dashboard</a>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="admin-bg">
+            <a class="navbar-brand" href="#">Chatter</a>
+              <a class="nav-link" href="https://github.com/john-lock/chatter" style="color: white;">
+                  <span class="d-none d-sm-inline"> View on GitHub </span>
+                  <svg version="1.1" width="16" height="16" viewBox="0 0 16 16" class="octicon octicon-mark-github" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg>
+                </a>
         </nav>
     </header>
 
@@ -22,8 +27,9 @@
                 </ul>
             </nav>
             <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3" id="main">
-                <h1>Chats</h1>
-                <p>👈 Select a chat to load the messages</p>
+                <h1>Chat client list</h1>
+                <p>Select a chat window to show and sent messages to</p><br><br>
+                <a>You can open more chat clients from the <a href="/">Client page<a>, to open multiple keep opening more windows</a>
                 <p>&nbsp;</p>
                 <div class="chat" style="margin-bottom:150px">
                     <h5 id="room-title"></h5>
@@ -41,8 +47,11 @@
                         </tbody>
                     </table>
                 </div>
+
+            
+              
             </main>
-        </div>
+        </div> 
     </div>
 
     <script src="https://js.pusher.com/4.0/pusher.min.js"></script>
