--- a/templates/index.html
+++ b/templates/index.html
@@ -1,79 +1,93 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Spin Spinner Spinnest!</title>
+    <title>Chatter</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
-  </head>
-  <body>
-    <div class="site-wrapper">
-      <div class="site-wrapper-inner">
-        <div class="cover-container">
-          <header class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">SPIN</h3>
-              <nav class="nav nav-masthead">
-                <a class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Contact</a>
-              </nav>
-            </div>
-          </header>
-          <main role="main" class="inner cover">
-            <h1 class="cover-heading">SPIN</h1>
-            <p class="lead">SPIN is a simple realtime chat widget powered by Pusher.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-secondary">GO for a SPIN?</a>
-            </p>
-          </main>
-          <footer class="mastfoot">
-          </footer>
-        </div>
-      </div>
-    </div>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+</head>
 
+<body>
+  <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="https://github.com/john-lock/chatter">
+                  <span class="d-none d-sm-inline"> View on GitHub </span>
+                  <svg version="1.1" width="16" height="16" viewBox="0 0 16 16" class="octicon octicon-mark-github" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg>
+                </a>
+              </li>
+            </ul>
+    <div class="site-wrapper">
+        <div class="site-wrapper-inner">
+            <div class="cover-container">
+                <main role="main" class="inner cover">
+                    <h1 class="cover-heading">Chatter</h1>
+                    <p class="lead">A Pusher-powered chat application built using Flask</p>
+                    <hr>
+                    <p class="lead">
+                        <a>Start a chat in this window to chat with a chat host</a><br><br>
+
+                           <nav class="nav nav-pills nav-fill">
+                        <a href="/admin" class="btn btn-secondary" data-toggle="tooltip" title="Open a new window to take the chat host position" target="_blank" style="margin-left: auto; margin-right: auto;">Click to open window of host</a>
+                    </nav><br>
+                        <a>Enter a username and email in the chat window below. The username is displayed for the chat host, and the email serves as a unique identifier(it doesnt have to be a working address, just in the correct format)</a>
+                        <br><br>
+                        This could be used for a support service or website assistant
+                    </p>
+                </main>
+                <footer class="mastfoot">
+                </footer>
+            </div>
+        </div>
+    </div>
     <div class="chatbubble">
         <div class="unexpanded">
-            <div class="title">Chat with Support</div>
+            <div class="title">Chat</div>
         </div>
         <div class="expanded chat-window">
-          <div class="login-screen container">
-            <form id="loginScreenForm">
-              <div class="form-group">
-                <input type="text" class="form-control" id="fullname" placeholder="Name*" required>
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control" id="email" placeholder="Email Address*" required>
-              </div>
-              <button type="submit" class="btn btn-block btn-primary">Start Chat</button>
-            </form>
-          </div>
-          <div class="chats">
-            <div class="loader-wrapper">
-              <div class="loader">
-                <span>{</span><span>}</span>
-              </div>
+            <div class="login-screen container">
+                <form id="loginScreenForm">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="fullname" placeholder="Name*" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="email" placeholder="Email Address*" required>
+                    </div>
+                    <button type="submit" class="btn btn-block btn-primary">Start Chat</button>
+                </form>
             </div>
-            <ul class="messages clearfix">
-            </ul>
-            <div class="input">
-              <form class="form-inline" id="messageSupport">
-                <div class="form-group">
-                  <input type="text" autocomplete="off" class="form-control" id="newMessage" placeholder="Enter Message">
+            <div class="chats">
+                <div class="loader-wrapper">
+                    <div class="loader">
+                        <span>{</span><span>}</span>
+                    </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Send</button>
-              </form>
+                <ul class="messages clearfix">
+                </ul>
+                <div class="input">
+                    <form class="form-inline" id="messageSupport">
+                        <div class="form-group">
+                            <input type="text" autocomplete="off" class="form-control" id="newMessage" placeholder="Enter Message">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send</button>
+                    </form>
+                </div>
             </div>
-          </div>
         </div>
-    </div>    
+    </div>
     <script src="https://js.pusher.com/4.0/pusher.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/popper.js') }}"></script>
-	  <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
-	  <script type="text/javascript" src="{{ url_for('static', filename='js/axios.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/axios.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
-  </body>
+    <script>
+    $(document).ready(function() {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+    </script>
+</body>
+
 </html>
