--- a/templates/index.html
+++ b/templates/index.html
@@ -27,14 +27,17 @@
                     <p class="lead">A Pusher-powered chat application built using Flask</p>
                     <hr>
                     <p class="lead">
-                        <a>Start a chat in this window to chat with a chat host</a><br><br>
+                      <a>How to use: <br>
+                        
+                        <a>- Open the Admin view: <span><a href="/admin" class="btn btn-secondary" data-toggle="tooltip" title="Open a new window to take the chat host position" target="_blank">Admin View</a></span>
+                    <br>
+                        <a>- Start a chat in this window to chat with the admin</a><br>
+                        <a>- Reply back from the admin window</a><br>
+                        <a>- Open more instances of this window to add more client conversations</a><br><hr>
 
-                           <nav class="nav nav-pills nav-fill">
-                        <a href="/admin" class="btn btn-secondary" data-toggle="tooltip" title="Open a new window to take the chat host position" target="_blank" style="margin-left: auto; margin-right: auto;">Click to open window of host</a>
-                    </nav><br>
+                    
                         <a>Enter a username and email in the chat window below. The username is displayed for the chat host, and the email serves as a unique identifier(it doesnt have to be a working address, just in the correct format)</a>
-                        <br><br>
-                        This could be used for a support service or website assistant
+                                                
                     </p>
                 </main>
                 <footer class="mastfoot">
